Corrigindo o json api