@@ -1,15 +1,14 @@
+// com.tecnolog.autocoleta.salvarcoleta.SalvarColetaFeignAdapter
 package com.tecnolog.autocoleta.salvarcoleta;
 
-import com.tecnolog.autocoleta.salvarcoleta.payload.SalvaColetaModel;
-import com.tecnolog.autocoleta.dto.SalvarColetaResponse; 
-
+import com.tecnolog.autocoleta.dto.SalvarColetaRequest;
+import com.tecnolog.autocoleta.dto.SalvarColetaResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import com.tecnolog.autocoleta.dto.SalvarColetaRequest;
-
 @Component
 public class SalvarColetaFeignAdapter implements SalvarColetaClient {
+
     private final SalvarColetaFeign feign;
     private final String tokenHash;
 
@@ -19,14 +18,11 @@ public class SalvarColetaFeignAdapter implements SalvarColetaClient {
         this.tokenHash = tokenHash;
     }
 
-    public SalvarColetaResponse salvar(SalvaColetaModel model) {
-        if (model.getTokenHash() == null || model.getTokenHash().trim().isEmpty()) {
-            model.setTokenHash(tokenHash);
+    @Override
+    public SalvarColetaResponse salvar(SalvarColetaRequest body) {
+        if (body.getTokenHash() == null || body.getTokenHash().isBlank()) {
+            body.setTokenHash(tokenHash);
         }
-        return feign.salvar(model);
-    }
-
-    public String salvar(SalvarColetaRequest body) {
-        throw new UnsupportedOperationException("Not supported yet.");
+        return feign.salvar(body);
     }
 }
